--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,9 +7,14 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav" *ngFor="let menu of menus">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">{{menu}}</a>
+          <a class="nav-link active" aria-current="page" href="#" (click)="onSelectedMenu(menu.path)">{{menu.name}}</a>
         </li>
       </ul>
     </div>
+
+    <span class="navbar-text">
+        <button class="btn btn-primary" (click)="onSubscribe()">SUBSCRIBE</button>
+    </span>
+
   </div>
 </nav>
